# sylverant-mini18n

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  mini18n_pv_file_csv.c
